<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="stackNumberFormat"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="digitsColor"
        android:title="@string/pref_digit_color"
        android:defaultValue="@android:color/holo_orange_light"
        />
    <com.rarepebble.colorpicker.ColorPreference
        android:key="operandsColor"
        android:title="@string/pref_operands_color"
        android:defaultValue="@android:color/holo_green_dark"
        />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="commandsColor"
        android:title="@string/pref_commands_color"
        android:defaultValue="@android:color/holo_blue_light"
        />

</PreferenceScreen>
